Actions
Bug #13363
closedctfconvert could support more granular ignore for missing debug data
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
In order to guard against generating objects with incomplete CTF data, ctfconvert
currently exits with an error if it detects that some of the source objects are missing debug information. This check can be overridden with the -m
option.
However, this is an all or nothing option which masks all missing data.
It would be nice to have a way of selectively allowing source objects to have missing data.
Related issues
Updated by Andy Fiddaman over 1 year ago
- Precedes Feature #13366: Add CTF tests for new features added
Updated by Andy Fiddaman over 1 year ago
This new option has been integrated to OmniOS for a few weeks and is being used to selectively ignore missing DWARF data in objects.
build:illumos:ig_ctf% ctfconvert -o /dev/null ~/ctf/test ctfconvert: WARNING: file test2.c is missing debug information ctfconvert: WARNING: file test3.c is missing debug information ctfconvert: CTF conversion failed due to missing debug data; use -m to override
build:illumos:ig_ctf% ctfconvert -o m -m ~/ctf/test ctfconvert: WARNING: file test2.c is missing debug information ctfconvert: WARNING: file test3.c is missing debug information
build:illumos:ig_ctf% echo test2.c > ignore build:illumos:ig_ctf% echo test3.c >> ignore build:illumos:ig_ctf% ctfconvert -o M -M ignore ~/ctf/test
build:illumos:ig_ctf% ctfdump -S m | grep 'number of functions' total number of functions = 2 build:illumos:ig_ctf% ctfdump -S M | grep 'number of functions' total number of functions = 2
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 88a08813800ed7ba7c927986421cee437f7f2233
commit 88a08813800ed7ba7c927986421cee437f7f2233 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2020-12-17T21:18:56.000Z 13363 ctfconvert could support more granular ignore for missing debug data Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Rich Lowe <richlowe@richlowe.net>
Actions