13363 ctfconvert could support more granular ignore for missing debug data Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Rich Lowe <richlowe@richlowe.net>